--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 .all {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(230, 230, 230);
   width: 100%;
   height: 100vh;
   display: flex;
@@ -38,5 +38,27 @@ h2 {
 }
 
 p {
+  max-width: 80%;
   max-width: 1200px;
+  margin: 10px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+@media (max-width: 1200px) {
+  p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  p {
+    font-size: 12px;
+  }
 }
