--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -9,9 +9,9 @@
 }
 
 .homeCont {
+  margin-top: 5%;
   position: relative;
   display: flex;
-  margin-top: 10%;
   justify-content: center;
   align-items: center;
 }
@@ -28,6 +28,7 @@
 }
 
 .homeCont p {
+  margin: 0 10%;
   position: relative;
   z-index: 2;
   color: white;
@@ -37,4 +38,12 @@
   color: rgb(145, 14, 123);
   font-weight: 900;
   text-align: center;
+}
+
+.homePage h1 {
+  color: rgba(255, 255, 255, 0.808);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  border-bottom: 1px solid white;
+  box-shadow: 0 10px 10px -5px rgba(255, 255, 255, 0.5);
+  display: inline-block;
 }
